Fix styling and spacing issues with tournament section form

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,5 @@
 #about {
-  background-color: #ed9149;
+  background-color: #2576c9;
   color: white;
 }
 
